--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "russian",
   "version": "0.0.0",
   "scripts": {
+    "start": "webpack-dev-server --hot --inline --host '0.0.0.0' --port $PORT"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^2.15.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
