--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dsv-loader": "^1.0.3",
     "html-webpack-plugin": "^2.15.0",
-    "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
