--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dsv-loader": "^1.0.3",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "dsv-loader": "andybry/dsv-loader#5c85801",
     "html-webpack-plugin": "^2.15.0",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
