--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^0.14.8",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.8.4"
   },
   "dependencies": {
     "http-server": "^0.9.0",
