--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "html-webpack-plugin": "^2.15.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
