--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb",
   "rules": {
-    "semi": ["error", "never"]
+    "semi": [ "error", "never" ],
+    "comma-dangle": [ "error", "never" ]
   }
 }
