--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "heroku:deploy": "heroku builds:create -a russian-words",
     "deploy": "npm install && npm prune --production && npm run heroku:deploy"
   },
+  "pre-push": [
+    "lint"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -26,6 +29,7 @@
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
     "html-webpack-plugin": "^2.15.0",
+    "pre-push": "^0.1.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
