--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "clean": "rimraf public",
     "compile": "NODE_ENV=production webpack",
     "prepublish": "npm run clean && npm run compile",
+    "test": "mocha --compilers js:babel-register --recursive",
+    "test:watch": "npm test -- --watch --reporter min",
     "start:dev": "webpack-dev-server --hot --inline --host '0.0.0.0' --port $PORT",
     "start:prod": "http-server --port $PORT public",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -24,11 +26,13 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "babel-register": "^6.7.2",
     "dsv-loader": "andybry/dsv-loader#5c85801",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
     "html-webpack-plugin": "^2.15.0",
+    "mocha": "^2.4.5",
     "pre-push": "^0.1.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
