Add spec for Table component

--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.7.2",
     "dsv-loader": "andybry/dsv-loader#5c85801",
+    "enzyme": "^2.2.0",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "expect": "^1.16.0",
     "html-webpack-plugin": "^2.15.0",
     "mocha": "^2.4.5",
     "pre-push": "^0.1.1",
     "react": "^0.14.8",
+    "react-addons-test-utils": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
