Add spec for App

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf public",
     "compile": "NODE_ENV=production webpack",
     "prepublish": "npm run clean && npm run compile",
-    "test": "mocha --compilers js:babel-register --recursive",
+    "test": "mocha --compilers js:babel-register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch --reporter min",
     "start:dev": "webpack-dev-server --hot --inline --host '0.0.0.0' --port $PORT",
     "start:prod": "http-server --port $PORT public",
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^4.2.3",
     "expect": "^1.16.0",
     "html-webpack-plugin": "^2.15.0",
+    "jsdom": "^8.2.0",
     "mocha": "^2.4.5",
     "pre-push": "^0.1.1",
     "react": "^0.14.8",
