--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.1",
     "redux": "^3.3.1",
+    "redux-logger": "^2.6.1",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
