--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepublish": "npm run clean && npm run compile",
     "test": "mocha --compilers js:babel-register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch --reporter min",
-    "start:dev": "webpack-dev-server --hot --inline --host '0.0.0.0' --port ${PORT:-8080} --history-api-fallback",
+    "start:dev": "npm run clean && babel-node src/server",
     "start:prod": "node lib/server",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "heroku:deploy": "heroku builds:create -a russian-words",
@@ -58,7 +58,8 @@
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0",
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
