Render index.html in express

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.7.2",
+    "chokidar": "^1.4.3",
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
     "dsv-loader": "andybry/dsv-loader#5c85801",
@@ -38,7 +39,6 @@
     "eslint-plugin-react": "^4.2.3",
     "expect": "^1.16.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.15.0",
     "jsdom": "^8.2.0",
     "lost": "^6.7.2",
     "mocha": "^2.4.5",
