--- a/package.json
+++ b/package.json
@@ -45,13 +45,7 @@
     "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.8.2",
     "pre-push": "^0.1.1",
-    "react": "^0.14.8",
     "react-addons-test-utils": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.1",
-    "redux": "^3.3.1",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.9",
@@ -63,7 +57,14 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
+    "d3-dsv": "^0.3.2",
     "express": "^4.13.4",
-    "if-env": "^1.0.0"
+    "if-env": "^1.0.0",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.1",
+    "redux": "^3.3.1"
   }
 }
